Cleaned up some plot code & removed redundant links to data.

--- a/BBLReport.Rmd
+++ b/BBLReport.Rmd
@@ -75,7 +75,7 @@ box()
 
 Black Bear Lake is a deep cirque lake located in steep mountainous terrain near Klawock, Prince of Wales Island, Southeast Alaska (Figure 2, and 3). The lake is 2.4 km long and varies in width from 150 to 643 m. It has a surface area of 87 ha, a volume of 27.14 ha^3 and a maximum depth of 69 m. The shoreline consists primarily of steep bedrock and large boulder, although there are some gravels suitable for spawning near the lake outlet and other small areas around the shoreline. The outlet stream falls approximately 427 m over a distance of approximately 530 m to the lower valley floor and forms a source for Black Bear Creek <cite>(HDR Engineering 1991)</cite>, which drains into Black Lake. The USFWS stocked Black Bear Lake with rainbow trout from Washington State in 1956 to initiate a sport fishery.
 
-![Black Bear Lake](D:/R/R_DAnalysis/bbl.jpg)
+![Black Bear Lake](D:/R/ESR505/bbl.jpg)
 
 ```{r plot3_BBL, fig.cap="Black Bear Lake, Prince of Wales Island, SE Alaska."}
 library(ggmap)
@@ -191,13 +191,12 @@ scatter <-function(rbt, Length_mm, Weight_g, RBT) {
   p <- p + labs (title = RBT)
   print(p)
 }
-coolPlot1(rbt, "Length_mm", "Weight_g", "Rainbow Trout")
+scatter(rbt, "Length_mm", "Weight_g", "Rainbow Trout")
 ```
 
 To better understand the relationship between fish lenght and weight, we transormed the data for a linear comparison.  The length-weight relationship was $Log Weight = 2.85 Log Length - 10.64$, and the adjusted $R^2$ for the regression was 0.97 (Figure 6, table 1).  Since the residuals plots (Figure 7) are horizontal (not curved or sloped), equal width, and uniformely scattered along the horizontal axis, we concluded that the regression model is a good fit.  The four age-1 fish (49 to 54 mm) from the second sampling event were not included in the length-weight analysis because they skew the correlation for larger fish.
 
 ```{r plot6_LM, fig.cap="Natural Log transformed length and  weight during July, 2002."}
-rbt_sub <- subset(rbt, Length_mm > 60 & Recapture == "n")
 require(ggplot2) 
 # Regression of length on weight for all fish > 60 mm
 linear <- qplot(log(Length_mm), log(Weight_g), data=rbt_sub, geom=c("point", "smooth"), 
@@ -332,8 +331,8 @@ ___
 ```{r pdf_file, include=FALSE}
 # The below code converts markdown file to pdf, or Word docx using the pander package.
 
-require(pander)
-Pandoc.convert(f="BBLreport.md", format="pdf", options="-s")
+# require(pander)
+# Pandoc.convert(f="BBLreport.md", format="pdf", options="-s")
 
 # Pandoc.convert(f="BBLreport.md", format="docx", options="-s")
 ```
